--- a/projeto1/base_templates/global/base.html
+++ b/projeto1/base_templates/global/base.html
@@ -4,7 +4,7 @@
 <head>
 
 {% include "recipes/partials/head.html" %} 
-<title>Aprendizado Django {% block title %}{% endblock title %} </title>
+<title>Django {% block title %}{% endblock title %} </title>
 
 </head>
 
